Criando pacote v2 com novas classes, correcoes e melhorias
Foi criada a interface Agent que foi implementada por TelegramAgent, novo codigo, e o codigo anterior que está em IntelligentAgentService. Foi finalizado o metodo getIntentions na implementacao BDIRepoJson